[project]
name = "aett"
version = "0.0.0"
description = "Event store for Python"
readme = "README.md"
authors = [{ name = "Jacob Reimers", email = "pypi@reimers.io" }]
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/jjrdk/aett" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
keywords = ["events", "event store", "sqlite", "postgresql", "mysql", "mongodb", "dynamodb", "s3", "event sourcing"]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic >=2.12.3",
    "multipledispatch (>=1.0, <2.0)",
]

[project.optional-dependencies]
sqlite_async = ["aiosqlite~=0.21"]
postgresql = ['psycopg~=3.2', 'psycopg-binary~=3.2']
postgresql_async = ["asyncpg~=0.30"]
mongodb = ["pymongo~=4.13"]
dynamodb = ["boto3~=1.40", "boto3-stubs[full]>=1.38"]
dynamodb_async = ["aioboto3>=15.0"]
s3 = ["boto3~=1.40"]
s3_async = ["aioboto3>=15.0"]
mysql = ["pymysql~=1.1"]
mysql_async = ["aiomysql~=0.2"]

[tool.poetry]
packages = [
    { include = "aett", from = "src" }
]

[dependency-groups]
dev = [
    "aioboto3>=15.0",
    "behave>=1.2",
    "pymongo>=4.13",
    "psycopg>=3.2",
    "psycopg-binary>=3.2",
    "asyncpg>=0.30",
    "aiosqlite>=0.21",
    "pymysql>=1.1",
    "types-pymysql>=1.1",
    "aiomysql>=0.2",
    "pytest-xdist>=3.8",
    "mypy>=1.17,<2.0.0",
    "testcontainers[minio,mysql]>=4.12.0",
    "ruff>=0.12"
]

[tool.ruff.lint]
ignore = ["F401", "F403", "F405", "E722", "F811", "F821", "F841"]

[tool.behave]
capture = false
junit = false
logging_level = "FATAL"
outfiles = ["test_report.txt"]
paths = ["tests/features"]

[project.scripts]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
